# atp

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
atp/: __init__.py  cli.py  computation.py  io.py  output.py  plotting.py  xml_plotter.py
tests/: test_computation.py  test_io_output_plotting.py
